cc_test(
    name = "network_all_test",
    srcs = glob([
        "*_test.cpp",
        "*.h",
    ]),
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wno-unknown-pragmas",
    ],
    includes = ["../"],
    deps = [
        "//network",
        "//network/test/proto:book_cc_proto",
        "@googletest//:gtest_main",
    ],
)
