load("//build_defs:cpp_opts.bzl", "COPTS")

cc_test(
    name = "network_all_test",
    srcs = glob([
        "*_test.cpp",
        "*.h",
    ]),
    copts = COPTS,
    includes = ["../"],
    deps = [
        "//network",
        "//network/test/proto:book_cc_proto",
        "@googletest//:gtest_main",
    ],
)
