cc_test(
    name = "pycstl_all_test",
    srcs = glob([
        "*_test.cpp",
        "*.h",
    ]),
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror",
        "-Wno-unknown-pragmas",
    ],
    includes = ["../"],
    deps = [
        "//pycstl",
        "@googletest//:gtest_main",
    ],
)
