load("//build_defs:cpp_opts.bzl", "STRICT_COPTS")
load("@rules_qt//:qt.bzl", "qt_cc_binary", "qt_cc_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["LICENSE"])

qt_cc_library(
    name = "notepad_lib",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = glob(["include/**/*.h"]),
    copts = STRICT_COPTS,
    includes = ["include"],
    deps = [
        "@rules_qt//:qt_widgets",
    ],
)

qt_cc_binary(
    name = "notepad",
    srcs = ["main.cpp"],
    copts = STRICT_COPTS,
    data = glob([
        "res/*",
    ]),
    deps = [
        ":notepad_lib",
    ],
)
