load("//build_defs:cpp_opts.bzl", "STRICT_COPTS")

cc_binary(
    name = "demo",
    srcs = glob([
        "*.cpp",
    ]),
    copts = STRICT_COPTS,
    data = glob(["assets/**"]),
    deps = [
        "//sdl2",
        "//sdl2:sdl2_image",
        "//sdl2:sdl2_mixer",
        "//sdl2:sdl2_ttf",
        "@fmt",
        "@sdl2_gfx",
    ],
)
